--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 My name is Jianshu Zhao, currently a Bioinformatic Ph.D student at Georgia Institute of Technology, Atlanta.
 Before I came to georgia tech, I did my Masters at Tsinghua University, Beijing, China. Being a lover of microbiology, I worked with Prof. Yunfeng Yang and Prof. Jizhong Zhou for my masters.
 Now I am workong with Prof. Kostas Konstantidinis, studying enironmental microbial genomics. As a bioinfomatician, I develop some tools to better understand large scale DNA and RNA sequence data and try to understand the complexity of natural microbial communities.
-I am extremely intereted in understanding the unusual biology of bacterial and archaea in extreme environment such as deep sea sedment (larege than 6000 meters), Tibetan Plateau and Tundra ecosystems.
+I am extremely intereted in understanding the unusual biology of bacterial and archaea in extreme environment such as deep sea sedment (larger than 6000 meters), Tibetan Plateau and Tundra ecosystems.
 I am a python and C++ person and I work on both Linux and MacOS systems. I love swimming, hiking and coding. Contact me at jianshu.zhao@gatech.edu
